# vnc-automate

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  logging.ini  logging.yaml  mypy.ini  pytest.ini  setup.cfg  setup.py  tox.ini
debian/: changelog  clean  control  copyright  python-vnc-automate.install  python3-vnc-automate.install  rules
src/vncautomate/: __init__.py  cli.py  client.py  config.py  ocr.py  segment_line.pyx
test-cython/: test.py
tests/: test_cli.py  test_cython.py  test_ocr.py  test_ocr2.py
vncautomate/: __init__.py  cli.py  client.py  config.py  ocr.py  pyximportcpp.py  segment_line.pyx
