[metadata]
author = Univention GmbH
author_email = packages@univention.de
description = GUI test framework for Python
long_description = file:README.md
long_description_content_type = "text/markdown"
url = https://git.knut.univention.de/univention/vnc-automate/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Testing
license = GNU Affero General Public License v3
license_file = LICENSE
platforms = any

[options]
zip_safe = False
# scripts =
packages =
    vncautomate
# setup_requires =
install_requires =
    numpy
    Pillow
    scipy
    lxml>=3,<4
    Twisted
    vncdotool
# extra_require
# tests_require =
# test_suite =

[tox]
envlist = py27,py37

[testenv:py27]
basepython = python2
skip_install = true
deps =
    -r{toxinidir}/requirements.txt
    flake8
    isort
    pytest
    pytest-cov
commands =
    flake8
    isort --check-only
    pytest

[testenv:py37]
basepython = python3
skip_install = true
deps =
    mypy
commands =
    mypy .

[flake8]
max-line-length = 220
ignore =
    # W191 indentation contains tabs
    W191,
    # E265 block comment should start with '# '
    E265,
    # E117 over-indented
    E117,

[mypy]
python_version = 2.7
ignore_missing_imports = True

[isort]
line_length = 220
multi_line_output = 3
include_trailing_comma = 1
known_standard_library =
    ConfigParser,
known_first_party =
    univention,
known_third_party =
    lxml,
skip_glob =
    bdist,
    build,
    debian,
    dist,
    doc,
    sdist,
    .tox,
recursive = 1

[tool:pytest]
norecursedirs = .* build debian dists
addopts =
    --verbose
    --cov vncautomate
    --cov-report term
    --cov-report html:public/
    --cov-report xml:coverage.xml
    --junit-xml=pytest.xml
    --doctest-modules vncautomate

