[metadata]
name = vnc-automate
version = 1.0.0
author = Univention GmbH
author_email = packages@univention.de
description = GUI test framework for Python
long_description = file:README.md
long_description_content_type = "text/markdown"
url = https://git.knut.univention.de/univention/vnc-automate/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Testing
license = GNU Affero General Public License v3
license_files =
    debian/copyright
platforms=
    any

[options]
zip_safe = False
# scripts =
package_dir =
    =src
packages =
    vncautomate
setup_requires =
    setuptools>=18.0
    cython
install_requires =
    numpy
    Pillow
    scipy
    Twisted<21; python_version <= "2.7"
    Twisted; python_version >= "3.0"
    vncdotool
# tests_require =
# test_suite =

[options.extras_require]
lxml = lxml>=3,<4
